force-app/src/objects/cpm__Page_Element__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Configuration__c</fullName>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Domain_ID__c</fullName>
        <label>Domain ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cpm__Page_Content_Type__c</fullName>
        <label>Page Content Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Image</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Payment Form</fullName>
                </value>
                <value>
                    <fullName>Title</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Page_Element_Id__c</fullName>
        <label>Page Element Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Page_Element_Type__c</fullName>
        <label>Page Element Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Page</fullName>
                </value>
                <value>
                    <fullName>Section</fullName>
                </value>
                <value>
                    <fullName>Row</fullName>
                </value>
                <value>
                    <fullName>Column</fullName>
                </value>
                <value>
                    <fullName>Content</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Page_External_Id__c</fullName>
        <label>Page External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Page_Name__c</fullName>
        <label>Page Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Page_Type__c</fullName>
        <label>Page Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>givingpage</fullName>
                </value>
                <value>
                    <fullName>checkout</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Parent_Page_Element__c</fullName>
        <label>Parent Page Element</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Published__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Published</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Slug__c</fullName>
        <label>Slug</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page Element</label>
    <nameField>
        <displayFormat>PE-{0}</displayFormat>
        <label>Page Element Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Page Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>